# knowledge-browser

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
.trunk/: trunk.yaml
docs/adr/: 0001-choose-postgres-pgvector.md
docs/architecture/: data-model.md  overview.md  threat-model.md
docs/decisions/: decision-log.md
docs/runbooks/: local-dev.md
infra/docker/: docker-compose.yml
infra/docker/postgres/initdb/: 010_schema.sql
infra/scripts/: bootstrap.sh  lint.sh  test.sh
libs/kb_core/: README.md  pyproject.toml
libs/kb_core/src/kb_core/: __init__.py  models.py
libs/kb_core/tests/: test_imports.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/kb_api/: __init__.py  config.py  db.py  main.py
services/api/tests/: test_healthz.py
services/ui/: Dockerfile  package.json
services/ui/src/: index.html  server.js
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/src/kb_worker/: __init__.py  cli.py
services/worker/tests/: test_cli_smoke.py
