[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-worker"
version = "0.1.0"
description = "Knowledge Browser worker CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.15.0,<1.0.0",
  "kb-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[project.scripts]
kb-worker = "kb_worker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
